fix: keep app's redirect uri's query params on error (#4544)
(cherry picked from commit 52a21377338f440f55e6c31a5b6ee1b5a044a128)

# Conflicts:
#	gravitee-am-test/package-lock.json
#	gravitee-am-test/package.json