@@ -15,12 +15,17 @@
  */
 package io.gravitee.am.common.web;
 
-import java.io.UnsupportedEncodingException;
+import io.gravitee.am.common.oauth2.Parameters;
+import io.gravitee.am.common.utils.ConstantKeys;
+
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Map;
+import java.util.TreeMap;
+import java.util.function.BiConsumer;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -62,14 +67,14 @@ public class UriBuilder {
             "^" + HTTP_REGEX + "(//(" + USERINFO_REGEX + "@)?" + HOST_REGEX + "(:" + PORT_REGEX +
                     ")?" + ")?" + PATH_REGEX + "(\\?" + QUERY_REGEX + ")?" + "(#" + LAST_REGEX + ")?");
 
-    private static final Pattern HTTP_PATTERN = Pattern.compile(HTTP_REGEX.replace(":",""));
+    private static final Pattern HTTP_PATTERN = Pattern.compile(HTTP_REGEX.replace(":", ""));
 
     private static final String LOCALHOST_HOST_REGEX = "^localhost$";
     private static final String LOCALHOST_IPV4_REGEX = "^127(?:\\.[0-9]+){0,2}\\.[0-9]+$";
     private static final String LOCALHOST_IPV6_REGEX = "^(?:0*\\:)*?:?0*1$";
 
     private static final Pattern LOCALHOST_PATTERN = Pattern.compile(
-            LOCALHOST_HOST_REGEX +"|"+ LOCALHOST_IPV4_REGEX +"|"+ LOCALHOST_IPV6_REGEX);
+            LOCALHOST_HOST_REGEX + "|" + LOCALHOST_IPV4_REGEX + "|" + LOCALHOST_IPV6_REGEX);
 
     private String scheme;
     private String host;
@@ -97,15 +102,14 @@ public class UriBuilder {
             builder.scheme(scheme);
             builder.host(host);
             if (port != null && !port.isEmpty()) {
-                builder.port(Integer.valueOf(port));
+                builder.port(Integer.parseInt(port));
             }
             builder.userInfo(userInfo);
             builder.path(path);
             builder.query(query);
             builder.fragment(fragment);
             return builder;
-        }
-        else {
+        } else {
             throw new IllegalArgumentException("[" + uri + "] is not a valid URI");
         }
     }
@@ -124,14 +128,13 @@ public class UriBuilder {
             builder.host(host);
             String port = matcher.group(7);
             if (port != null && !port.isEmpty()) {
-                builder.port(Integer.valueOf(port));
+                builder.port(Integer.parseInt(port));
             }
             builder.path(matcher.group(8));
             builder.query(matcher.group(10));
             builder.fragment(matcher.group(12));
             return builder;
-        }
-        else {
+        } else {
             throw new IllegalArgumentException("[" + httpUrl + "] is not a valid HTTP URL");
         }
     }
@@ -140,23 +143,18 @@ public class UriBuilder {
      * Convert a String to the application/x-www-form-urlencoded MIME format
      */
     public static String encodeURIComponent(String s) {
-        String result;
-        try {
-            result = URLEncoder.encode(s, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            result = s;
+        if (s == null) {
+            return null;
         }
-        return result;
+        return URLEncoder.encode(s, StandardCharsets.UTF_8);
     }
 
     public static String decodeURIComponent(String s) {
-        String result;
         try {
-            result = URLDecoder.decode(s, "UTF-8");
+            return URLDecoder.decode(s, StandardCharsets.UTF_8);
         } catch (Exception e) {
-            result = s;
+            return s;
         }
-        return result;
     }
 
     public UriBuilder scheme(String scheme) {
@@ -196,7 +194,7 @@ public class UriBuilder {
 
     public UriBuilder parameters(Map<String, String> parameters) {
         if (parameters != null) {
-            parameters.forEach((k, v) -> addParameter(k, v));
+            parameters.forEach(this::addParameter);
         }
         return this;
     }
@@ -217,6 +215,27 @@ public class UriBuilder {
         }
         query += parameter + "=" + value;
         return this;
+    }
+
+    /**
+     * Add a query param if the value isn't null, otherwise return this builder unmodified
+     */
+    public UriBuilder addNotNullParameter(String parameter, String value) {
+        if (value == null) {
+            return this;
+        }
+        return addParameter(parameter, value);
+
+    }
+
+    /**
+     * Add a param to the fragment if the value isn't null, otherwise return this builder unmodified
+     */
+    public UriBuilder addNotNullFragmentParameter(String parameter, String value) {
+        if (value == null) {
+            return this;
+        }
+        return addFragmentParameter(parameter, value);
     }
 
     /**
@@ -293,5 +312,28 @@ public class UriBuilder {
 
     public static boolean isLocalhost(String host) {
         return LOCALHOST_PATTERN.matcher(host.toLowerCase()).matches();
+    }
+
+
+    public static URI buildErrorRedirect(String baseRedirectUri, ErrorInfo error, boolean fragment, Map<String, String> extraParams) throws URISyntaxException {
+        final URI redirectUri = UriBuilder.fromURIString(baseRedirectUri).build();
+
+        var parameters = new TreeMap<String, String>();
+        parameters.put(ConstantKeys.ERROR_PARAM_KEY, error.error());
+        parameters.put(ConstantKeys.ERROR_CODE_PARAM_KEY, error.code());
+        parameters.put(ConstantKeys.ERROR_DESCRIPTION_PARAM_KEY, error.description());
+        parameters.put(Parameters.STATE, error.state());
+        parameters.putAll(extraParams);
+
+        // create final redirect uri
+        final UriBuilder finalRedirectUri = UriBuilder.fromURIString(redirectUri.toString());
+        BiConsumer<String, String> addParameter = fragment
+                ? (k,v) -> finalRedirectUri.addNotNullFragmentParameter(k, encodeURIComponent(v))
+                : (k,v) -> finalRedirectUri.addNotNullParameter(k, encodeURIComponent(v));
+        parameters.forEach(addParameter);
+        return finalRedirectUri.build();
+    }
+    public static URI buildErrorRedirect(String baseRedirectUri, ErrorInfo error, boolean fragment) throws URISyntaxException {
+       return buildErrorRedirect(baseRedirectUri, error, fragment, Map.of());
     }
 }
